--- a/src/app/applications-forms/renewal-passport/renewal-passport.component.css
+++ b/src/app/applications-forms/renewal-passport/renewal-passport.component.css
@@ -80,3 +80,10 @@ button[type="submit"] {
     cursor: pointer;
     text-decoration: none;
 }
+
+input[type="email"] {
+    width: 100%;
+    padding: 8px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+}
