--- a/src/app/private-components/dashboard/dashboard.component.css
+++ b/src/app/private-components/dashboard/dashboard.component.css
@@ -41,3 +41,14 @@
   color: blue;
   margin-right: 5px;
 }
+
+.back-button {
+  display: inline-block;
+  background-color: #888;
+  color: #000000;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 20px;
+  cursor: pointer;
+  text-decoration: none;
+}
