--- a/src/app/private-components/navigation-priv/navigation-priv.component.html
+++ b/src/app/private-components/navigation-priv/navigation-priv.component.html
@@ -3,14 +3,16 @@
         <div class="nav-item" *ngIf="type_user === 'cityzen'">
             <a class="navbar-brand" routerLink="/dashboard">e-Passport Dashboard</a>
         </div>
-        <div class="nav-item" *ngIf="type_user === 'employeeYP01' || type_user === 'employeeYP02'">
+        <div class="nav-item"
+            *ngIf="type_user === 'employeeYP01' || type_user === 'employeeYP02'  || type_user === 'employeeSEC'">
             <a class="navbar-brand" routerLink="/dashboard-employee">e-Passport Dashboard</a>
         </div>
         <ul class="navbar-nav">
             <li class="nav-item" *ngIf="type_user === 'cityzen'">
                 <a class="nav-link" routerLink="/dashboard">Dashboard</a>
             </li>
-            <li class="nav-item" *ngIf="type_user === 'employeeYP01' || type_user === 'employeeYP02'">
+            <li class="nav-item"
+                *ngIf="type_user === 'employeeYP01' || type_user === 'employeeYP02' || type_user === 'employeeSEC'">
                 <a class="nav-link" routerLink="/dashboard-employee">Dashboard</a>
             </li>
 
