Create view-Passport component for cityzens

--- a/src/app/private-components/dashboard/dashboard.component.html
+++ b/src/app/private-components/dashboard/dashboard.component.html
@@ -4,6 +4,10 @@
       <a class="back-button" href="/dashboard-employee">Go to BACK</a>
     </ng-container>
     <ng-container *ngIf=" this.type_user === 'cityzen'">
+      <a href="/passports-view" class="link">
+        <span class="black-text">Τα διαβατηρια μου</span>
+        <span class="blue-text">Πατήστε εδώ</span>
+      </a>
       <a href="/issuance-view-citizen-list" class="link">
         <span class="black-text">0. Οι Αιτήσεις μου</span>
         <span class="blue-text">Πατήστε εδώ</span>
