--- a/src/app/applications-employee-views/passport-view/passport-view.component.html
+++ b/src/app/applications-employee-views/passport-view/passport-view.component.html
@@ -6,7 +6,7 @@
         </div>
 
         <ng-container *ngIf=" this.type_user === 'cityzen'">
-            <a class="back-button" href="/issuance-view-citizen-list">Go to BACK</a>
+            <a class="back-button" href="/passports-view">Go to BACK</a>
         </ng-container>
         <br>
         <ng-container *ngIf=" this.type_user != 'cityzen'">
@@ -17,7 +17,10 @@
 
         <ng-container *ngIf="this.flag == true">
             <h1>Passport View</h1>
-
+            <div class="form-group">
+                <label>Passport ID:</label>
+                <p>{{ passportDetails.id}}</p>
+            </div>
             <div class="form-group">
                 <label>Passport number:</label>
                 <p>{{ passportDetails.passport_number}}</p>
