--- a/src/app/private-components/dashboard-employee/dashboard-employee.component.html
+++ b/src/app/private-components/dashboard-employee/dashboard-employee.component.html
@@ -22,7 +22,10 @@
         <span class="black-text">Ολα τα διαβατηρια του τμηματος</span>
         <span class="blue-text">Πατήστε εδώ</span>
       </a>
-
     </ng-container>
+    <a href="/cityzen-view-list" class="link">
+      <span class="black-text">Ολοι οι πολιτες του τμηματος</span>
+      <span class="blue-text">Πατήστε εδώ</span>
+    </a>
   </div>
 </div>
