--- a/src/app/user-management/add-address/add-address.component.html
+++ b/src/app/user-management/add-address/add-address.component.html
@@ -11,11 +11,22 @@
             <div *ngIf="successMessage" class="success-message">
                 {{ successMessage }}
             </div>
-            <div class="update-form">
-                <a href="/view-user" class="button">
-                    Go BACK
-                </a>
-            </div>
+            <ng-container *ngIf="cityzenId == undefined">
+                <div class="update-form">
+                    <a href="/view-user" class="button">
+                        Go BACK
+                    </a>
+                </div>
+            </ng-container>
+            <ng-container *ngIf=" this.type_user !== 'cityzen'">
+
+                <div class="update-form">
+                    <a *ngIf="cityzenId" (click)="editCityzen(cityzenId )" class="button">
+                        Go BACK
+                    </a>
+
+                </div>
+            </ng-container>
             <br>
             <h2>Add New Address</h2>
             <form (ngSubmit)="submitForm()">
