--- a/src/app/user-management/edit-address/edit-address.component.html
+++ b/src/app/user-management/edit-address/edit-address.component.html
@@ -21,25 +21,27 @@
             <form (ngSubmit)="submitForm()">
                 <div class="form-group">
                     <label for="number">Street:</label>
-                    <input type="text" id="street" name="street" [(ngModel)]="userData.street" required>
+                    <input type="text" id="street" name="street" [(ngModel)]="userData.address.street" required>
                 </div>
                 <div class="form-group">
                     <label for="number">Street Number:</label>
-                    <input type="text" id="street_number" name="street_number" [(ngModel)]="userData.street_number"
-                        required>
+                    <input type="text" id="street_number" name="street_number"
+                        [(ngModel)]="userData.address.street_number" required>
                 </div>
                 <div class="form-group">
                     <label for="number">Region Name:</label>
-                    <input type="text" id="region_name" name="region_name" [(ngModel)]="userData.region_name" required>
+                    <input type="text" id="region_name" name="region_name" [(ngModel)]="userData.address.region_name"
+                        required>
                 </div>
                 <div class="form-group">
                     <label for="number">Prefecture Name:</label>
                     <input type="text" id="prefecture_name" name="prefecture_name"
-                        [(ngModel)]="userData.prefecture_name" required>
+                        [(ngModel)]="userData.address.prefecture_name" required>
                 </div>
                 <div class="form-group">
                     <label for="number">Postal Code:</label>
-                    <input type="text" id="postal_code" name="postal_code" [(ngModel)]="userData.postal_code" required>
+                    <input type="text" id="postal_code" name="postal_code" [(ngModel)]="userData.address.postal_code"
+                        required>
                 </div>
                 <button type="submit">
                     <span>Update</span>
