--- a/src/app/user-management/edit-user/edit-user.component.html
+++ b/src/app/user-management/edit-user/edit-user.component.html
@@ -62,7 +62,8 @@
             </div>
             <div class="form-group">
                 <label for="password">password:</label>
-                <input type="password" id="password" name="password" [(ngModel)]="userData.password" required>
+                <input type="password" id="password" name="password" [(ngModel)]="userData.password" required
+                    autocomplete="new-password">
             </div>
 
             <button type="submit">
