--- a/src/app/user-management/add-address/add-address.component.html
+++ b/src/app/user-management/add-address/add-address.component.html
@@ -18,7 +18,7 @@
                     </a>
                 </div>
             </ng-container>
-            <ng-container *ngIf=" this.type_user !== 'cityzen'">
+            <ng-container *ngIf="cityzenId &&  this.type_user !== 'cityzen'">
 
                 <div class="update-form">
                     <a *ngIf="cityzenId" (click)="editCityzen(cityzenId )" class="button">
