--- a/src/app/user-management/edit-phone-number/edit-phone-number.component.html
+++ b/src/app/user-management/edit-phone-number/edit-phone-number.component.html
@@ -21,7 +21,7 @@
             <form (ngSubmit)="submitForm()">
                 <div class="form-group">
                     <label for="number">Phone Number:</label>
-                    <input type="text" id="number" name="number" [(ngModel)]="phoneNumber.number" required>
+                    <input type="text" id="number" name="number" [(ngModel)]="phoneNumber.phoneNumber.number" required>
                 </div>
                 <button type="submit">
                     <span>Update</span>
