--- a/src/app/user-management/view-user/view-user.component.html
+++ b/src/app/user-management/view-user/view-user.component.html
@@ -35,10 +35,13 @@
         <div *ngIf="errorMessage2" class="error-message">
             {{ errorMessage2 }}
         </div>
+        <div *ngIf="successMessage2" class="success-message">
+            {{ successMessage2 }}
+        </div>
         <br>
         <a href="/add-phone-number" class="pointer-cursor">Add Number</a>
         <div *ngFor="let phoneNumber of phoneNumbers">
-            <p><strong>Number:</strong> {{ phoneNumber.number }}<a (click)="editNumber(phoneNumber.id)"
+            <p><strong>Number:</strong> {{ phoneNumber.phoneNumber.number }}<a (click)="editNumber(phoneNumber.id)"
                     class="pointer-cursor"> Edit Number</a><a (click)="removeNumberOfUser(phoneNumber.id)"
                     class="pointer2-cursor"> Remove Number</a></p>
 
@@ -52,6 +55,9 @@
         <ng-container *ngIf="addresses.length > 0">
             <h2>My Addresses</h2>
         </ng-container>
+        <div *ngIf="successMessage3" class="success-message">
+            {{ successMessage3 }}
+        </div>
         <div *ngIf="errorMessage3" class="error-message">
             {{ errorMessage3 }}
         </div>
